--- a/functions/Pipfile
+++ b/functions/Pipfile
@@ -24,8 +24,8 @@ python_version = "3.8"
 test = "python3 -m pytest --cov --cov-report=term"
 'test:updatesnapshots' = "python3 -m pytest --snapshot-update"
 cover = "python3 -m coverage html"
-complexity = "python3 -m radon cc notify_slack.py -a"
-halstead = "python3 -m radon hal notify_slack.py"
+complexity = "python3 -m radon cc main.py -a"
+halstead = "python3 -m radon hal main.py"
 typecheck = "python3 -m mypy . --ignore-missing-imports"
 lint = "python3 -m flake8 . --count --statistics --benchmark --exit-zero --config=.flake8"
 'lint:ci' = "python3 -m flake8 . --config=.flake8"
